Switch javafx plugin