@@ -10,6 +10,7 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'de.dynamicfiles.projects.gradle.plugins:javafx-gradle-plugin:8.7.0'
     }
 }
 
@@ -38,32 +39,12 @@ dependencies {
     testCompile 'se.lovef.test:test:1.0.8'
 }
 
+apply plugin: 'javafx-gradle-plugin'
 
-// Declares binary plugin and its required JavaFX classpath
-apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"
-
-// Configures plugin
-javafx {
-    // Application name and ID presented by target OS
-    appID 'line-drawer'
-    appName 'Line Drawer'
-
-    // Main class of application
+jfx {
+    // minimal requirement for jfxJar-task
     mainClass 'se.lovef.linedrawer.Main'
 
-    // JVM arguments, system properties, application command line arguments
-    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
-    systemProperties = ['prism.disableRegionCaching':'true']
-    arguments = ['-l', '--fast']
-
-//    // Keystore credentials for signing JAR
-//    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
-//    releaseKey {
-//        alias = 'release'
-//        keyPass = getProjectProperty('keyStorePassword')
-//        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
-//        storePass = getProjectProperty('storePassword')
-//    }
-//
-//    signingMode 'release'
+    // minimal requirement for jfxNative-task
+    vendor = 'lovef'
 }
